src/objects/SPE_BWRuleConfigurator__c.object
<CustomObject>
    <fields>
        <fullName>AveragingLogic__c</fullName>
        <label>Averaging Logic</label>
        <picklist>
            <picklistValues>
                <fullName>Simple Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weighted Average by Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weighted Average by Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BW with Project Simple Average</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryArea__c</fullName>
        <defaultValue>&apos;All Category Areas&apos;</defaultValue>
        <label>Category Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <defaultValue>&apos;All Category Groups&apos;</defaultValue>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <defaultValue>&apos;All Categories&apos;</defaultValue>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <defaultValue>&apos;All Countries&apos;</defaultValue>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Unit__c</fullName>
        <defaultValue>&apos;All Market Units&apos;</defaultValue>
        <label>Market Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <defaultValue>&apos;All Markets&apos;</defaultValue>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nego_Responsible__c</fullName>
        <label>Nego Responsible</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R+G</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <defaultValue>&apos;All Projects&apos;</defaultValue>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BW Rule Configurator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CategoryArea__c</columns>
        <columns>CategoryGroup__c</columns>
        <columns>Category__c</columns>
        <columns>Market__c</columns>
        <columns>Market_Unit__c</columns>
        <columns>Country__c</columns>
        <columns>Project__c</columns>
        <columns>AveragingLogic__c</columns>
        <columns>Nego_Responsible__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BW-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BW Rule Configurator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>